--- a/discord.html
+++ b/discord.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <style>
+        body {
+            background-color: #FFA751;
+            color: #333;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .redirect-message {
+            text-align: center;
+            padding: 20px;
+            background-color: #FFE259;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+        .redirect-message p {
+            font-size: 24px;
+            margin: 10px 0;
+        }
+    </style>
     <script type="text/javascript">
         if (window.location.pathname === "/discord") {
             window.location.href = "https://discord.gg/QWwFjDQ4";
@@ -8,6 +34,9 @@
     </script>
 </head>
 <body>
-    <p>Redirecting...</p>
+    <div class="redirect-message">
+        <h1>Redirecting...</h1>
+        <p>Please wait while you are redirected.</p>
+    </div>
 </body>
 </html>
